header structure and logout

--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,11 +1,12 @@
 #header
 {
+	
 	background:url(/resources/imgs/bg_main.jpg) no-repeat center center;
 }
 
 #mainPageHeader div
 {
-	padding:2% 0 2% 0;
+	padding:0 0 2% 0;
 }
 
 #mainPageHeader img
@@ -31,7 +32,7 @@
 	cursor:pointer;
 	background-color:none;
 	margin:2%;
-	
+	padding: 1% 0 1% 0 !important;
 	color:#fff;
 	font-weight:bold;
 	font-size:1.4em;
