--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,21 +1,19 @@
 #header
 {
-	
 	background:url(/resources/imgs/bg_main.jpg) no-repeat center center;
-	
+	color:#fff;
 }
 
-#mainPageHeader div
-{
-	padding:0 0 2% 0;
-}
 
-#mainPageHeader img
+#header img
 {
 	margin:auto;
 	padding-top:5%;
+	padding-bottom:5%;
+	
 }
-#mainPageHeader p
+
+#header p
 {
 	padding-top:5%;
 }
