--- a/src/main/webapp/resources/css/body.css
+++ b/src/main/webapp/resources/css/body.css
@@ -39,3 +39,16 @@
 {
 	cursor:pointer;
 }
+
+/*
+	admin
+*/
+#adminContainer
+{
+	color:#fff;
+}
+
+#adminContainer label:hover
+{
+	cursor:pointer;
+}
