--- a/src/main/webapp/resources/css/less.css
+++ b/src/main/webapp/resources/css/less.css
@@ -15,7 +15,7 @@
   padding: 10px;
   border-radius: 5px;
   width: 1000px;
-  background-color: #e0e0e0;
+  background-color: #fff;
   margin-top: 50px;
   height: 75px;
   color: darkgrey;
@@ -123,12 +123,128 @@
   cursor: pointer;
 }
 .form_table {
-  width: 1000px;
-  text-align: center;
-  background: #e7e7e7;
-  padding: 15px;
+  width: 600px;
+  background: #f1f1f1;
+  padding: 25px;
   border-radius: 10px;
+  margin-top: 30px;
 }
-.form_table h3 {
-  color: #262626 !important;
+.form_table span {
+  color: #262930 !important;
+  font-size: 1.7rem;
+  margin-left: 15px;
+}
+.form_table form {
+  border-top: 2px solid #e6e6e6;
+  margin-top: 15px;
+}
+.form_table form table {
+  text-align: center;
+  width: 70%;
+  margin-top: 10px;
+}
+.form_table form table tr td {
+  position: relative;
+  font-size: 1.4rem;
+}
+.form_table form table tr td #blah {
+  width: 140px;
+  height: 140px;
+  cursor: pointer;
+}
+.form_table form table tr td #logoimg {
+  position: absolute;
+  width: 140px;
+  height: 140px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  cursor: pointer;
+}
+.form_table form table tr td #img_sp {
+  font-size: 0.7em;
+  display: inline-block;
+  margin-top: 7px;
+  opacity: 0.7;
+}
+.form_table form table tr td .inp_txt {
+  height: 30px;
+  border: 1px solid #ccc;
+  padding-left: 5px;
+}
+.form_table form table tr td #check_btn {
+  width: 80px;
+  height: 30px;
+  background: #f1f1f1;
+  border: 1px solid #ccc;
+  color: #262626;
+}
+.form_table form table tr td #s_btn {
+  font-size: 1.3rem;
+  height: 30px;
+  background: #f1f1f1;
+  border: 1px solid #ccc;
+  color: #262626;
+}
+.form_table form table tr td .slice_txt {
+  height: 30px;
+  background: #fff;
+  border: 1px solid #ccc;
+  padding-left: 5px;
+  width: 30%;
+}
+.form_table form table tr td #em_sel {
+  height: 30px;
+  font-size: 1.1rem;
+}
+.form_table form table tr td #ok_btn {
+  width: 120px;
+  height: 40px;
+  margin-top: 20px;
+  color: #383838;
+  border: 1px solid #ccc;
+  background: #fff;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+.form_table form table tr td #ok_btn::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 50px;
+  left: 0;
+  top: 0;
+  background: #383838;
+  z-index: -1;
+  transition: .25s;
+  -webkit-transition: .25s;
+  -moz-transition: .25s;
+}
+.form_table form table tr td #ok_btn:hover {
+  color: white;
+}
+.form_table form table tr td #ok_btn:hover::before {
+  width: 120px;
+}
+#log_form {
+  width: 1000px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+#log_form .log_inp {
+  width: 250px;
+  height: 35px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding-left: 5px;
+}
+#log_form .log_btn {
+  width: 250px;
+  height: 35px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #383838;
 }
